fix: Edit review and dark mode css

--- a/src/components/wrappers/PageWrapper/styles.scss
+++ b/src/components/wrappers/PageWrapper/styles.scss
@@ -6,6 +6,11 @@
   color: #fff;
   padding-bottom: 60px;
 
+  .MuiFormControlLabel-label.Mui-disabled {
+    color: inherit !important;
+    opacity: 0.8;
+  }
+
   textarea {
     color: #fff;
   }
